--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,12 @@
 @import "../layout/_section-principal.scss";
 @import "../layout/footer";
 @import "../components/_menu.scss";
-@import "../components/promos";
+@import "../components/_promos.scss";
 @import "../components/_sucursales.scss";
 @import "../components/_nosotros.scss";
 @import "../components/_responsive.scss";
 @import "../components/_sec-menu.scss";
+@import "../layout/_sec-promos.scss";
+@import "../layout/_sec-contacto.scss";
+@import "../layout/_sec-nos.scss";
+@import "../layout/_sec-sucursales.scss";
