--- a/layout/header.scss
+++ b/layout/header.scss
@@ -16,3 +16,28 @@
         font-size: 2.1875rem;
     }
 }
+.navbar a {
+    position: relative;
+    transition: color 0.3s ease;
+
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -5px;
+        height: 2px;
+        width: 100%;
+        background-color: black;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform 0.3s ease;
+    }
+
+    &:hover {
+        color: darken(black, 10%);
+    }
+
+    &:hover::after {
+        transform: scaleX(1);
+    }
+}
